--- a/app/src/main/res/layout/wallet_recycler_view_token_item.xml
+++ b/app/src/main/res/layout/wallet_recycler_view_token_item.xml
@@ -11,6 +11,7 @@
         android:layout_height="32dp"
         android:layout_marginLeft="15dp"
         android:scaleType="fitXY"
+        android:src="@mipmap/wallet_default_token_icon"
         android:layout_marginTop="20dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
