--- a/app/src/main/res/layout/wallet_fragment_me.xml
+++ b/app/src/main/res/layout/wallet_fragment_me.xml
@@ -49,7 +49,7 @@
                 <include
                     android:id="@+id/id_hub_vip"
                     layout="@layout/wallet_fragment_me_level_item_view"
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
                     app:layout_constraintLeft_toLeftOf="@id/qualified_investor"
@@ -79,7 +79,7 @@
                 <include
                     android:id="@+id/qualified_investor"
                     layout="@layout/wallet_fragment_me_level_item_view"
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
                     android:layout_marginTop="15dp"
@@ -89,7 +89,7 @@
                 <include
                     android:id="@+id/qualified_purchaser"
                     layout="@layout/wallet_fragment_me_level_item_view"
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="38dp"
                     app:layout_constraintLeft_toRightOf="@id/qualified_investor"
@@ -98,7 +98,7 @@
                 <include
                     android:id="@+id/st_compliance_investor"
                     layout="@layout/wallet_fragment_me_level_item_view"
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="38dp"
                     android:layout_marginRight="25dp"
